more styling of the desktop-sized navbar + fixing sections (contact is still blank but is ok) (menu is prly still broken on small screen sizes)

--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,15 @@
     --clr-light: #eee;
     --clr-dark: #303030;
     --clr-accent: #2dcece;
+    --clr-nav-1: #f02d57;
+    --clr-nav-2: #f5af2d;
+    --clr-nav-3: #7eb801;
+    --clr-nav-4: #735396;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
     --fs-h3: 1.25em;
+    --fs-nav: .95em;
     --fs-body: 1rem;
     --fs-little: .8rem;
 
@@ -50,6 +55,7 @@
         --fs-h1: 4.5rem;
         --fs-h2: 3.75rem;
         --fs-h3: 1.5em;
+        --fs-nav: 1.1em;
         --fs-body: 1.125rem;
         --fs-little: .95rem;
     }
@@ -75,7 +81,7 @@ body {
 }
 
 section {
-    padding: 5em 2em;
+    padding: calc(5em + 100px) 2em 5em 2em;
     min-height: 100vh;
 }
 
@@ -129,6 +135,14 @@ h2 {
 
 h3 {
     font-size: var(--fs-h3);
+}
+
+.nav__link {
+    color: inherit;
+
+    font-family: var(--ff-title);
+    font-weight: var(--fw-reg);
+    font-size: var(--fs-nav);
 }
 
 .section__title {
@@ -206,9 +220,6 @@ header {
 }
 
 .nav__link {
-    color: inherit;
-    font-weight: var(--fw-bold);
-    font-size: var(--fs-h2);
     text-decoration: none;
 }
 
@@ -306,8 +317,52 @@ header {
         height: 100px;
     }
 
+    .nav {
+        position: static;
+        color: var(--clr-light);
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 100;
+
+        transform: translateX(0%);
+        transition: none;
+    }
+
+    .nav__list {
+        list-style: none;
+        display: flex;
+        height: 100%;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 0;
+        padding: 1em;
+    }
+
+    .nav__item + .nav__item .nav__link {
+        padding-left: 3vw;
+    }
+
+    .nav__link:hover {
+        color: var(--clr-nav-3);
+    }
+
+    .nav__item:first-child .nav__link:hover {
+        color: var(--clr-nav-1);
+    }
+
+    .nav__item:last-child .nav__link:hover {
+        color: var(--clr-nav-4);
+    }
+
+    .nav__item:nth-child(2) .nav__link:hover {
+        color: var(--clr-nav-2);
+    }
+
     .logo {
-        max-width: 70px;
+        width: 65px;
     }
 
     .hamburger {
@@ -389,59 +444,10 @@ header {
 }
 
 
-/* Services section */
-.my-services {
-    background-color: var(--clr-dark);
-    background-image: url(../img/services-bg.jpg);
-    background-size: cover;
-    background-position: center;
-    color: var(--clr-light);
-    text-align: center;
-}
-
-.section__title--services {
-    color: var(--clr-accent);
-    position: relative;
-}
-
-.section__title--services::after {
-    content: '';
-    display: block;
-    width: 25%;
-    height: 1px;
-    margin: .5em auto 1em;
-    background: var(--clr-light);
-    /*background: currentColor;*/
-    opacity: .25;
-}
-
-.services {
-    margin-bottom: 4em;
-}
-
-.service {
-    max-width: 500px;
-    margin: 0 auto;
-}
-
-@media (min-width: 800px) {
-    .services {
-        display: flex;
-        max-width: 1000px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .service + .service {
-        margin-left: 2em;
-    }
-}
-
-
 /* About me section */
 .about-me {
-    max-width: 1000px;
-    margin: 0 auto;
+    width: 100%;
+    background-color: var(--clr-light);
 }
 
 .about-me__img {
@@ -521,6 +527,56 @@ header {
 .portfolio__item:focus .portfolio__img {
     transform: scale(1.2);
     opacity: .75;
+}
+
+
+
+/* Services section */
+.my-services {
+    background-color: var(--clr-dark);
+    background-image: url(../img/services-bg.jpg);
+    background-size: cover;
+    background-position: center;
+    color: var(--clr-light);
+    text-align: center;
+}
+
+.section__title--services {
+    color: var(--clr-accent);
+    position: relative;
+}
+
+.section__title--services::after {
+    content: '';
+    display: block;
+    width: 25%;
+    height: 1px;
+    margin: .5em auto 1em;
+    background: var(--clr-light);
+    /*background: currentColor;*/
+    opacity: .25;
+}
+
+.services {
+    margin-bottom: 4em;
+}
+
+.service {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+@media (min-width: 800px) {
+    .services {
+        display: flex;
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .service + .service {
+        margin-left: 2em;
+    }
 }
 
 
